# flika---Georges-Edition

./: AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  __main__.py  improvement_plan.md  pyproject.toml  setup.py  time_flika_startup.py
.github/workflows/: publish-to-pypi.yml
flika/: __init__.py  batch.py  flika.py  global_vars.py  logger.py  roi.py  tracefig.py  update_flika.py  window.py
flika/ai/: __init__.py  annotation_overlay.py  annotations.py  assistant.py  assistant_dialog.py  classifier_backends.py  classifier_dialog.py  denoiser.py  detection_backend.py  detection_dialog.py  features.py  live_session.py  localizer_backends.py  localizer_dialog.py  model_zoo.py  plugin_dialog.py  plugin_generator.py  psf_simulator.py  safety.py  sam_dialog.py  segmentation.py  training_dialog.py
flika/app/: application.py  dependency_checker.py  doc_browser.py  gpu_status.py  macro_recorder.py  main.ui  metadata_editor.py  plugin_manager.py  roi_manager.py  script_editor.py  script_namespace.py  settings_editor.py  syntax.py  templates.py  terminal.py
flika/camera/: __init__.py  acquisition.py  backends.py  camera_dialog.py
flika/core/: __init__.py  undo.py
flika/docs/: ai_tools.md  analysis.md  api_reference.md  file_operations.md  getting_started.md  image_menu.md  index.md  interoperability.md  keyboard_shortcuts.md  plugins.md  process_menu.md  roi_guide.md  simulation.md  spt_guide.md  troubleshooting.md  user_interface.md
flika/images/: __init__.py
flika/interop/: __init__.py  array_protocol.py  imagej_bridge.py  napari_bridge.py  ome.py
flika/io/: __init__.py  lazy.py  registry.py
flika/optics/: __init__.py  psf.py
flika/process/: __init__.py  alignment.py  background_sub.py  binary.py  calcium.py  colocalization.py  color.py  compositing.py  deconvolution.py  detection.py  export.py  file_.py  filters.py  frap.py  fret.py  kymograph.py  linescan.py  mask_editor.py  math_.py  measure.py  morphometry.py  overlay.py  progress_bar.py  segmentation.py  simulation.py  spectral.py  spt.py  stacks.py  stitching.py  structures.py  watershed.py
flika/simulation/: __init__.py  benchmark_dialog.py  benchmarks.py  dialog.py  dynamics.py  engine.py  evaluation.py  fluorophores.py  ground_truth.py  noise.py  optics.py  presets.py  psf.py  structures.py
flika/spt/: __init__.py  particle_data.py
flika/spt/batch/: __init__.py  batch_pipeline.py  batch_worker.py  expert_configs.py
flika/spt/classification/: __init__.py  svm_classifier.py
flika/spt/detection/: __init__.py  astigmatic_psf.py  csstorm.py  fiducial_drift.py  performance.py  rendering.py  thunderstorm.py  utrack_detector.py
flika/spt/features/: __init__.py  autocorrelation.py  feature_calculator.py  geometric.py  kinematic.py  spatial.py
flika/spt/io/: __init__.py  spt_formats.py
flika/spt/linking/: __init__.py  greedy_linker.py  kalman.py  trackpy_linker.py  utrack_linker.py
flika/templates/: batch_process.py  calcium_dff.py  cell_counting.py  denoise_segment.py  drift_correction.py  time_series.py
flika/tests/: README.rst  conftest.py  test_accel.py  test_ai.py  test_ai_classifier.py  test_ai_gui.py  test_analysis.py  test_benchmarks.py  test_compositor.py  test_correctness.py  test_denoiser.py  test_dynamics.py  test_figure_composer.py  test_file.py  test_io_registry.py  test_macro_recorder.py  test_misc.py  test_processes.py  test_provenance.py  test_settings_batch.py  test_spt_classifier.py  test_spt_detection.py  test_spt_features.py  test_spt_io.py  test_spt_io_extended.py  test_spt_linking.py  test_spt_particle_data.py  test_spt_pipeline.py  test_spt_trackpy.py  test_structures.py  test_track_overlay.py  test_undo.py  test_window.py
flika/utils/: BaseProcess.py  accel.py  app.py  batch.py  clustering.py  drawing.py  fitting.py  gaussian_fit.py  misc.py  msd.py  ndim.py  provenance.py  roi_stats.py  singleton.py  tracking.py  ui_components.py
flika/utils/__pycache__/: clustering._higher_density_distance_numba-30.py312.1.nbc  clustering._higher_density_distance_numba-30.py312.nbi
flika/utils/io/: __init__.py
flika/viewers/: __init__.py  all_tracks_plot.py  channel_compositor.py  channel_panel.py  chart_dock.py  counting_overlay.py  diffusion_plot.py  figure_composer.py  flower_plot.py  grid_overlay.py  line_profile.py  overlay_manager.py  results_table.py  roi_histogram.py  spt_control_panel.py  spt_detection_controls.py  track_overlay.py  track_window.py  volume_viewer.py
