[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flika"
dynamic = ["version"]
description = "An interactive image processing program for biologists written in Python — with 4D support, GPU acceleration, SPT, and AI-assisted analysis."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kyle Ellefsen", email = "kyleellefsen@gmail.com" },
    { name = "Brett Settle" },
    { name = "George Bhatt" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "pyqtgraph>=0.13",
    "PyQt6",
    "qtpy>=2.3",
    "setuptools>=1.0",
    "scikit-image>=0.20",
    "scikit-learn>=1.2",
    "ipython>=8.0",
    "ipykernel",
    "qtconsole",
    "pyopengl",
    "requests",
    "nd2reader",
    "markdown",
    "packaging",
    "tifffile>=2022.5.4",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.18",
]
gpu = [
    "cupy",
]
accel = [
    "numba>=0.57",
    "torch>=2.0",
]
classifier = [
    "torch>=2.0",
]
all-formats = [
    "h5py",
    "zarr",
    "ome-zarr>=0.9",
    "aicsimageio",
]
lazy = [
    "dask[array]>=2022.1",
]
segmentation = [
    "cellpose",
    "stardist",
    "csbdeep",
    "micro_sam",
]
model-zoo = [
    "bioimageio.core>=0.6",
    "bioimageio.spec>=0.5",
]
denoising = [
    "careamics>=0.1",
]
spt = [
    "trackpy>=0.6",
]
dev = [
    "pytest",
    "pytest-qt",
    "flake8",
    "mypy",
]

[project.scripts]
flika = "flika.flika:exec_"
flika_post_install = "flika.flika:post_install"

[project.urls]
Homepage = "http://flika-org.github.io"
Repository = "https://github.com/flika-org/flika"

[tool.hatch.version]
path = "flika/version.py"

[tool.hatch.build.targets.sdist]
include = ["flika/"]

[tool.hatch.build.targets.wheel]
packages = ["flika"]

[tool.pytest.ini_options]
testpaths = ["flika/tests"]
qt_no_exception_capture = true
