[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "markdown",
    "numpy",
    "scipy",
    "pytest",
    "qtpy",
    "PySide6"
]
build-backend = "setuptools.build_meta"

[project]
name = "flika"
version = "0.3.3"
description = "An interactive image processing program for biologists written in Python — with 4D support, GPU acceleration, SPT, and AI-assisted analysis."
readme = "README.md"
authors = [
    {name = "Kyle Ellefsen", email = "kyleellefsen@gmail.com"},
    {name = "Brett Settle"},
    {name = "George Bhatt"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "pyqtgraph>=0.13",
    "PySide6",
    "qtpy>=2.3",
    "setuptools>=1.0",
    "scikit-image>=0.20",
    "scikit-learn>=1.2",
    "ipython>=8.0",
    "ipykernel",
    "qtconsole",
    "pyopengl",
    "requests",
    "nd2reader",
    "markdown",
    "jaxtyping",
    "colorama",
    "packaging",
    "tifffile>=2022.5.4",
]

[project.urls]
Documentation = "http://flika-org.github.io/contents.html"
Source = "https://github.com/flika-org/flika"
Tracker = "https://github.com/flika-org/flika/issues"
Homepage = "http://flika-org.github.io"

[project.scripts]
flika = "flika.flika:exec_"
flika_post_install = "flika.flika:post_install"

[project.optional-dependencies]
ai = [
    "anthropic>=0.18",
]
gpu = [
    "cupy",
]
accel = [
    "numba>=0.57",
    "torch>=2.0",
]
classifier = [
    "torch>=2.0",
]
all-formats = [
    "h5py",
    "zarr",
    "ome-zarr>=0.9",
    "aicsimageio",
]
lazy = [
    "dask[array]>=2022.1",
]
segmentation = [
    "cellpose",
    "stardist",
    "csbdeep",
    "micro_sam",
]
model-zoo = [
    "bioimageio.core>=0.6",
    "bioimageio.spec>=0.5",
]
denoising = [
    "careamics>=0.1",
]
detection = [
    "ultralytics>=8.0",
]
camera = [
    "opencv-python>=4.5",
]
camera-micro-manager = [
    "pymmcore-plus>=0.7",
]
spt = [
    "trackpy>=0.6",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "pytest-qt",
    "twine>=3.4.0",
    "build>=0.7.0",
    "wheel>=0.36.0",
    "sphinx>=4.0.0",
    "sphinxcontrib-napoleon>=0.7",
    "mypy",
    "scipy-stubs",
    "flake8",
]

[tool.setuptools]
packages = [
    "flika",
    "flika.ai",
    "flika.app",
    "flika.camera",
    "flika.core",
    "flika.docs",
    "flika.images",
    "flika.interop",
    "flika.io",
    "flika.optics",
    "flika.process",
    "flika.simulation",
    "flika.spt",
    "flika.spt.batch",
    "flika.spt.classification",
    "flika.spt.detection",
    "flika.spt.features",
    "flika.spt.io",
    "flika.spt.linking",
    "flika.templates",
    "flika.tests",
    "flika.utils",
    "flika.viewers",
]
include-package-data = true

[tool.setuptools.package-data]
"flika" = ["*.ui", "*.ico", "*.png", "*.txt", "*.tif", "ui/*"]

[tool.pytest.ini_options]
testpaths = ["flika/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
qt_no_exception_capture = true

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["pyqtgraph.*"]
ignore_missing_imports = true
